<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IEC</string>
    <string name="intro_fp">Introduction to Family Planning</string>
    <string name="condom_method">Condom Method</string>
    <string name="ocp">OCP</string>
    <string name="iud">IUD</string>
    <string name="tubal_ligation">Female Sterilization</string>
    <string name="vasectomy">Male Sterilization</string>
    <string name="anc_general">ANC General</string>
    <string name="ifa">IFA</string>
    <string name="birth_plan">Birth Plan</string>
    <string name="danger_signs">Danger Signs</string>
    <string name="intro_pnc">Introduction to PNC</string>
    <string name="child_overview">Child Overview</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="ari">ARI</string>
    <string name="malnutrition">Malnutrition</string>
</resources>
